--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -105,20 +105,20 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 %Study cohort: 180 words
 %Cumsum: 672 words
 \include{mainmatter/stat_analysis}
-%Stat analysis: 702 words
-%Cumsum: 1374 words
+%Stat analysis: 727 words
+%Cumsum: 1399 words
 \include{mainmatter/result}
-%Stat analysis: 354 words
-%Cumsum: 1700 words
+%Stat analysis: 349 words
+%Cumsum: 1748 words
 \include{mainmatter/discussion}
-%Stat analysis: 678 words
-%Cumsum: 2378 words
+%Stat analysis: 631 words
+%Cumsum: 2379 words
 \include{mainmatter/conclusion}
-%Conclusion: 127 words
-%Cumsum: 2505 words
+%Conclusion: 128 words
+%Cumsum: 2507 words
 
-\section*{Acknowledgments}
-This work was supported by the Movember Foundation. The funder did not play any role in the study design, collection, analysis or interpretation of data, or in the drafting of this paper. The first and last Authors would like to acknowledge support by Nederlandse Organisatie voor Wetenschappelijk Onderzoek (the national research council of the Netherlands) VIDI grant nr. 016.146.301, and Erasmus University Medical Center funding.
+\include{mainmatter/author_contrib}
+\include{mainmatter/acknowledment}
 
 \bibliography{bibliography}
 
