--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,13 +1,13 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed a novel methodology and model for personalized scheduling of biopsies in prostate cancer active surveillance (AS) patients. Personalized schedules utilize patient-specific risks of reclassification. Reclassification is defined as increase in biopsy Gleason grade \citep{epsteinGG2014} from grade~1 to 2 or higher. Calculators for risk of reclassification are not new \citep{coley2017prediction,ankerst2015precision}. However, our work has four novel features. First, we personalized the risk of reclassification and used it to schedule biopsies in a personalized manner. Second, we developed a methodology that can calculate expected delay in detection of reclassification (less is beneficial) in a personalized manner, given any biopsy schedule. Thus patients and doctors can compare schedules before making a choice. Third, we implemented our methodology in a web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. Fourth, we validated our model in largest five AS cohorts from GAP3 database \citep{gap3_2018}, and hence the web-application can be used by a large number of patients worldwide.
+We developed a novel methodology and statistical model for personalized biopsy schedules in prostate cancer active surveillance (AS) patients. Personalized schedules utilize patient-specific risks of reclassification. Reclassification is defined as increase in Gleason grade~\citep{epsteinGG2014} from grade~1 to 2 or higher upon repeat biopsy. Reclassification risk calculators are not new~\citep{coley2017prediction,ankerst2015precision}. However, our work has four novel features. First, we developed a statistical model for developing personalized schedules using the world's largest AS cohort PRIAS. Second, we created a methodology to estimate time delay in detection of reclassification (less is beneficial) in a personalized manner, given any biopsy schedule. Thus patients/doctors can compare schedules before making a choice. Third, we externally validated our model in the largest five AS cohorts of the GAP3 database~\citep{gap3_2018}. Fourth, we implemented our methodology in a web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/} for PRIAS and externally validated cohorts.
 
-Currently biopsies are scheduled either in a fixed and frequent manner (e.g., annual biopsies), or PSA value/velocity/doubling-time is used as trigger for biopsies. These approaches have been criticized previously \citep{vickers2009psavelocity,bokhorst2015compliance}. However, earlier approaches do not exploit PSA data fully and correctly. Specifically, they assume that PSA is observed without measurement error, and/or latest PSA is enough to decide biopsies, and/or PSA changes over time in a linearly. In contrast, our joint model builds a patient-specific profile of PSA using all PSA measurements. It also allows PSA and its velocity to change over time non-linearly. Subsequently, it consolidates these finer PSA features, previous biopsy results, and baseline characteristics of a patient, to yield a single personalized estimate for risk of reclassification. Furthermore, the model updates this risk as more patient data is gathered over follow-up. This is a more holistic approach.
+Currently, in AS, either fixed schedules are used (e.g., annual biopsies), or PSA is used to trigger biopsies. Both approaches have been criticized~\citep{vickers2009psavelocity,bokhorst2015compliance}. We argue that current approaches have not exploited PSA fully and correctly. For example, using observed PSA is incorrect as it has measurement error. Other approaches utilize only the latest PSA and/or when they utilize all PSA data they assume it changes over time linearly (constant PSA velocity). In contrast, our joint model builds a measurement error free patient-specific profile of PSA using all PSA measurements. It allows PSA to increase/decrease non-linearly over time (non-constant PSA velocity). Subsequently, it consolidates underlying PSA value and velocity, previous biopsy results, and baseline characteristics of a patient, to yield a single personalized estimate for the risk of reclassification. Furthermore, this risk gets updated as more patient data becomes available over follow-up. This is a more holistic approach. Although we have not incorporated newer biomarkers and magnetic resonance imaging (MRI) data, when this information becomes available we can add them as predictors in our model. Decisions based on combined information from multiple sources can yield better results than based on MRI or PSA alone. 
 
-A holistic model like ours allows incorporating newer biomarkers and magnetic resonance imaging (MRI) data. Such information is currently sparsely available in PRIAS dataset. However, MRI data can be included as predictor in our model in future. Decisions based on combined information from multiple sources can yield better results than decisions based on MRI or PSA alone. 
+Our model is useful for a large number of patients from PRIAS, as well as from the largest five AS cohorts of the GAP3 database in which we validated our model. These are the University of Toronto AS, Johns Hopkins AS, Memorial Sloan Kettering Cancer Center AS, King's College London AS, and Michigan Urological Surgery Improvement Collaborative AS. We required recalibration of our model's baseline hazard of reclassification for all of these cohorts except the Johns Hopkins cohort. This can be explained by the fact that both PIRAS and Johns Hopkins cohorts have the same marginal rate of reclassification over time (Panel~B, Figure~\ref{fig:auc_beforecalib}). Extending our model in smaller cohorts requires only recalibrating our model.
 
-Our model is not only useful for PRIAS patients, but also for a large number of patients from other cohorts. This is because we have recalibrated and externally validated it in largest five AS cohorts from the GAP3 database \citep{gap3_2018}. These are University of Toronto AS (Toronto-AS), Johns Hopkins AS (JH-AS), Memorial Sloan Kettering Cancer Center AS (MSKCC-AS), King's College London AS (KCL-AS), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC-AS). Extending our model and methodology in smaller cohorts requires only recalibrating our model's baseline risk of reclassification.
+Our work has important clinical implications. The rate of reclassification after five years of follow-up was capped at 50\% in all cohorts that we evaluated (Figure~\ref{fig:auc_beforecalib}). That is, a large number of patients do not require any biopsy during the first five years of follow-up. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider personalized schedules instead. To assist them in this decision making, the web-application provides an estimate of time delay in detection of reclassification for both personalized and fixed schedules, in a personalized manner. We hope this will objectively address patient apprehensions regarding adverse outcomes in AS.
 
-Our work has important clinical implications. The median survival time for reclassification is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:auc_calib}). That is, more than 50\% of AS patients may not require any biopsy during the first ten years of follow-up. Given the concerns about non-compliance and burden of frequent biopsies \citep{bokhorst2015compliance}, the availability of our web-application may encourage patients and doctors to consider personalized schedules instead. For both personalized and fixed schedules, the web-application also provides an estimate of delay in detection of reclassification. We hope this will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. 
+This work has certain limitations. The proposed model is valid only for the first six years of follow-up in PRIAS, whereas reclassification may occur much later in many patients. This problem can be mitigated by refitting the model with new follow-up data in the future. While we focused only on reclassification, the number of positive biopsy cores can also be used to trigger treatment. We did not consider such additional criteria because they differ between cohorts~\citep{nieboer2018active}, whereas, reclassification is commonly used. Although, reclassification is susceptible to inter-observer variation. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
 
-Our work has certain limitations. The proposed model is valid only for the first ten years of follow-up in PRIAS, whereas reclassification may occur much later in many patients. In addition, our model predictions were less accurate in later follow-up period due to lack of training data. These problems can be mitigated by refitting the model with new follow-up data in future. Although, we focused only on reclassification, an increase in number of positive biopsy cores can also act as a trigger for treatment. We did not consider such additional triggers because they differ between cohorts \citep{nieboer2018active}. Whereas, reclassification is a commonly used criteria. Reclassification is susceptible to inter-observer variation. Models which account for this variation \citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
+%may be also add competing risks...additional criteria lead to competing risk too
