--- a/report/clinical/mainmatter/conclusion.tex
+++ b/report/clinical/mainmatter/conclusion.tex
@@ -1,3 +1,3 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Conclusions}
-We developed a novel methodology and model for personalized scheduling of biopsies in prostate cancer active surveillance (AS) patients. Unlike fixed biopsy schedules, personalized schedules utilize a patient's risk of reclassification to decide biopsies. They also update as more patient data becomes available over follow-up. Our model is externally validated in largest five AS cohorts of the GAP3 database. Our methodology is implemented in a web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) and is accessible to large number of AS patients from the validated cohorts. To assist patients/doctors in making a share decision of an appropriate biopsy schedule, the web-application provides expected time delay in detection of reclassification (smaller is beneficial), and timing and total number of biopsies (burden), for both personalized and currently used fixed schedules.
+We developed a novel methodology and statistical model for personalized scheduling of biopsies in prostate cancer active surveillance (AS) patients. Unlike fixed biopsy schedules, personalized schedules utilize a patient's risk of reclassification to decide biopsies. They also update as more patient data becomes available over follow-up. Our model is externally validated in largest five AS cohorts of the GAP3 database. Our methodology is implemented in a web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) and is accessible to large number of AS patients from the validated cohorts. To assist patients/doctors in making a shared decision of an appropriate biopsy schedule, the web-application provides expected time delay in detection of reclassification (smaller is beneficial), and timing and total number of biopsies (burden), for both personalized and currently used fixed schedules.
